<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.GameController">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".controller.GameController">

        <ScrollView
            android:layout_width="429dp"
            android:layout_height="626dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/id_hint"
                    android:inputType="numberSigned" />

                <EditText
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/title_hint"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/description_hint"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/precio_hint"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/src_hint"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/fecha_hint"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/sale_hint"
                    android:inputType="numberSigned" />

                <EditText
                    android:id="@+id/sale_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/sale_price_hint"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/XBOX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/category_xbox_hint"
                    android:inputType="numberSigned" />

                <EditText
                    android:id="@+id/PS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/category_ps4_hint"
                    android:inputType="numberSigned" />

                <Button
                    android:id="@+id/boton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alta_text" />

                <Button
                    android:id="@+id/boton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consulta_por_id_text" />

                <Button
                    android:id="@+id/boton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consulta_por_titulo_text" />

                <Button
                    android:id="@+id/boton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baja_por_id_text" />

                <Button
                    android:id="@+id/boton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ver_todos_text" />

                <Button
                    android:id="@+id/boton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filtro_xbox_text" />

                <Button
                    android:id="@+id/boton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filtro_ps4_text" />

                <Button
                    android:id="@+id/boton8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ofertas_text" />

                <Button
                    android:id="@+id/boton9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/novedades_text" />

                <LinearLayout
                    android:id="@+id/gamesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

                <!--<Button
                        android:id="@+id/boton6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Borrar BD" />-->

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>