<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ecommerce.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_ps4"
        android:name="com.example.ecommerce.ui.ps4.Ps4Fragment"
        android:label="@string/menu_ps4"
        tools:layout="@layout/fragment_ps4"/>

    <fragment
        android:id="@+id/nav_xbox"
        android:name="com.example.ecommerce.ui.xbox.XboxFragment"
        android:label="@string/menu_xbox"
        tools:layout="@layout/fragment_xbox" />
</navigation>